[gd_scene load_steps=23 format=3 uid="uid://bq1h28c2e37o0"]

[ext_resource type="Script" path="res://scripts/enemy1.gd" id="1_x4kkj"]
[ext_resource type="Texture2D" uid="uid://dijkshtsxgjvk" path="res://assets/free-pixel-art-tiny-hero-sprites/1 Pink_Monster/Pink_Monster_Idle_4.png" id="2_ndiui"]
[ext_resource type="Texture2D" uid="uid://dqfq0edrdg45a" path="res://assets/free-pixel-art-tiny-hero-sprites/1 Pink_Monster/Pink_Monster_Walk_6.png" id="3_pdo8u"]
[ext_resource type="Texture2D" uid="uid://basagh8ap2s6" path="res://assets/free-pixel-art-tiny-hero-sprites/1 Pink_Monster/Pink_Monster_Run_6.png" id="3_t2ofb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3qwo"]
atlas = ExtResource("2_ndiui")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4874"]
atlas = ExtResource("2_ndiui")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dif8"]
atlas = ExtResource("2_ndiui")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jxxi"]
atlas = ExtResource("2_ndiui")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clyn0"]
atlas = ExtResource("3_t2ofb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2juwk"]
atlas = ExtResource("3_t2ofb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13xvr"]
atlas = ExtResource("3_t2ofb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm43s"]
atlas = ExtResource("3_t2ofb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msbkf"]
atlas = ExtResource("3_t2ofb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3018"]
atlas = ExtResource("3_t2ofb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb07q"]
atlas = ExtResource("3_pdo8u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqfe5"]
atlas = ExtResource("3_pdo8u")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b10cn"]
atlas = ExtResource("3_pdo8u")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn2p0"]
atlas = ExtResource("3_pdo8u")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltkqj"]
atlas = ExtResource("3_pdo8u")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r7vu"]
atlas = ExtResource("3_pdo8u")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xg8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3qwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3qwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4874")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4874")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dif8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dif8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jxxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jxxi")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clyn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2juwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13xvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm43s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msbkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3018")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb07q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqfe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b10cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn2p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltkqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r7vu")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_835w1"]
size = Vector2(12, 24)

[node name="pinky" type="CharacterBody2D"]
script = ExtResource("1_x4kkj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_2xg8u")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_835w1")

[node name="RayDown" type="RayCast2D" parent="."]

[node name="RayUp" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(0, 1000)

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(0, 14)
target_position = Vector2(5000, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(0, 14)
rotation = 3.14159
target_position = Vector2(5000, 0)
